Fixed: SearchBar not centered

--- a/src/components/TempSwitch/TempSwitch.css
+++ b/src/components/TempSwitch/TempSwitch.css
@@ -1,12 +1,12 @@
-.switch-wrapper{
-    display: flex;
-    position: relative;
-    
-    width: 20%;
-    align-items:center;
-    justify-content: space-between;
-}
 
+#switch-wrapper{
+  display: flex;
+  position: relative; 
+  align-items:center;
+  justify-content: space-between;
+  
+
+}
 .switch input {
     opacity: 0;
     width: 0;
@@ -14,12 +14,13 @@
 }
 
 .slider {
+    
     position: absolute;
     cursor: pointer;
-    top: 10%;
+    top: 12%;
     left: 20%;
     right: 20%;
-    bottom: 10%;
+    bottom: 12%;
     background-color: rgb(155, 52, 52);
     -webkit-transition: .4s;
     transition: .4s;
@@ -31,7 +32,8 @@
     content: "";
     height: 20px;
     width: 20px;
-    right:20px;
+    bottom:-4%;
+    left:-4px;
     border: solid;
     background-color: white;
     -webkit-transition: .4s;
@@ -46,7 +48,7 @@ input:focus + .slider {
   }
 
 input:checked + .slider:before {
-    transform: translateX(20px);
+    transform: translateX(110%);
   }
   
 .slider.round {
