--- a/src/components/TopBar.css
+++ b/src/components/TopBar.css
@@ -7,3 +7,10 @@
     margin-top: 5%;
     
   }
+
+.topbar-spacing1{
+  width: 20%;
+}
+.topbar-spacing2{
+  width: 60%;
+}
